Made use of new SparqlEndpoint.describe() service to handle requests on TransformedRdfSource content.